@@ -5,6 +5,9 @@
 - Added the fuzzywuzzy library for fuzzy string matching
 - Moved all user agent related functions and strings into new user_agent module
 - Added datetime keys for youtube videos
+- Compat module enhancements
+- Directory module bugfixes
+- Added replace xml codes function
 - Various other tweaks
 
 [B]2.2.X[/B]
